fixed wrapping

--- a/advanceSearchStyles.css
+++ b/advanceSearchStyles.css
@@ -12,11 +12,11 @@
 			margin-left: 20px;
         }
         .header h1 {
-            color: red;
+            color: #d93025;
             font-size: 20px; 
             margin-left: -50px;
             margin-top: 85px; 
-		
+			font-weight: 300;
         }
         .divider {
             border-top: 1px solid grey;
@@ -28,7 +28,6 @@
 			align-items: center; 
 			padding: 10px; 
 		}
-	
 		.titleForms {
 			display: flex;
             align-items: center;
@@ -40,13 +39,15 @@
 			display: flex;
             align-items: right;
            	margin-top: 40px;
-			margin-right: 850px;
+			margin-right: 840px;
 			font-size: 14px;
+		    color: #777777;
+			font-weight: bold;
 		}
         .content {
             display: flex;
             justify-content: space-between;
-			align-items: center;
+			
 			padding: 10px; 
 
         }
@@ -77,18 +78,13 @@
 			font-size: 12px;
 		}
         .right p{
-			display: flex;
             width: 600px; 
             margin-right: 390px;
-			padding: 8px;
-			margin-bottom: 30px;
+			padding: 12px;
+			margin-bottom: 20px;
 			font-size: 12px;
-
+			margin-top: 0px;
 		}
-		.right {
-			margin-bottom: 50px;
-		}
-		
 		.highlight {
 			white-space: pre-wrap;
 			font-family: 'Courier New', Courier, monospace; 
@@ -97,11 +93,7 @@
 			margin-left: 10px;
 			margin-right: 10px;
 			display: inline;
-			
-
 		}
-
-		
 		#submitButton {
 			width: 140px; 
 			font-size: 12px;
@@ -112,9 +104,7 @@
 			margin-left: 720px;
 			margin-top: 20px;
 			border: none;
-		
 		}
-		
 		#link {
 			position: absolute;
 			top: 10px;
@@ -122,8 +112,8 @@
 			display: flex;
 			flex-direction: row;
 		}
-		
 		#link a {
 			text-decoration: none;
 			color: black;
 		}
+		
